# AsyncNFCServer

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.source/: CMakeLists.txt
.source/Server/: CMakeLists.txt
.source/Server/TCP/: TcpServer.tpp
.source/Server/include/: Reader.h
.source/asioServer/: CMakeLists.txt
.source/asioServer/TCP/: TcpConnection.h  TcpServer.cpp  TcpServer.h  TcpServer.tpp
.source/asioServer/include/: Reader.h  ReaderHandler.h
.source/asioServer/src/: Reader.cpp  ReaderHandler.cpp  main.cpp
Diagrams/: STM_overordnet.puml  UC_diagram.puml
Reader/: CMakeLists.txt  readme.md
Reader/Asio_Server/: CMakeLists.txt
Reader/Asio_Server/TCP/: TcpServer.cpp  TcpServer.h
Reader/Asio_Server/src/: Reader.cpp
Reader/Boost.asio-Server/: CMakeLists.txt
Reader/Boost.asio-Server/TCP/: TcpServer.h  TcpServer.tpp
Reader/Boost.asio-Server/src/: Reader.cpp  main.cpp
Reader/Server/: CMakeLists.txt
Reader/Server/TCP/: HandleTCP.cpp  HandleTCP.h  HandleTCP.tpp  TcpServer.h
Reader/Server/include/: Reader.h  State.h
Reader/Server/src/: Reader.cpp  State.cpp
Reader/include/: HandleTCP.h  State.h
Reader/servers/: CLI_TCP.c
Reader/src/: HandleTCP.cpp  State.cpp  main.cpp
client_rpi/pn532-lib/rpi_tcptest/: rpi_get_uid  rpi_read_uid
src/: main.cpp
